Fix: Update image paths to relative for GitHub Pages compatibility

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Navigation -->
     <nav class="brutal-nav">
-        <div class="logo"><img src="/logo.svg" alt="Penguin Art Logo" class="logo-img"></div>
+        <div class="logo"><img src="./logo.svg" alt="Penguin Art Logo" class="logo-img"></div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#masterpieces">Masterpieces</a></li>
@@ -40,7 +40,7 @@
         <div class="hero-image-container">
             <div class="blob-bg"></div>
             <div class="hero-placeholder">
-                <img src="/penguin-artist.svg" alt="Penguin Artist" class="artist-image">
+                <img src="./penguin-artist.svg" alt="Penguin Artist" class="artist-image">
                 <div class="artist-badge">THE ARTIST</div>
             </div>
         </div>
@@ -54,7 +54,7 @@
             <!-- Item 1 -->
             <div class="card brutal-card item-1">
                 <div class="card-image">
-                    <img src="/art-1.svg" alt="Fish in Chaos" class="art-image">
+                    <img src="./art-1.svg" alt="Fish in Chaos" class="art-image">
                 </div>
                 <div class="card-content">
                     <h3>"Fish in Chaos"</h3>
@@ -68,7 +68,7 @@
             <!-- Item 2 -->
             <div class="card brutal-card item-2">
                 <div class="card-image">
-                    <img src="/art-2.svg" alt="The King Salmon" class="art-image">
+                    <img src="./art-2.svg" alt="The King Salmon" class="art-image">
                 </div>
                 <div class="card-content">
                     <h3>"The King Salmon"</h3>
@@ -82,7 +82,7 @@
             <!-- Item 3 -->
             <div class="card brutal-card item-3">
                 <div class="card-image">
-                    <img src="/art-3.svg" alt="Cold Feet" class="art-image">
+                    <img src="./art-3.svg" alt="Cold Feet" class="art-image">
                 </div>
                 <div class="card-content">
                     <h3>"Cold Feet"</h3>
@@ -101,7 +101,7 @@
         <h2 class="section-title text-right">HAPPY COLLECTORS</h2>
         <div class="testimonials-carousel">
             <div class="testimonial-card">
-                <div class="avatar"><img src="/avatar-bear.svg" alt="Polar Bear" class="avatar-img"></div>
+                <div class="avatar"><img src="./avatar-bear.svg" alt="Polar Bear" class="avatar-img"></div>
                 <div class="review-text">
                     <p>"I usually eat penguins, but this one has talent. The bold lines speak to my primal instincts."
                     </p>
@@ -110,7 +110,7 @@
                 </div>
             </div>
             <div class="testimonial-card">
-                <div class="avatar"><img src="/avatar-seal.svg" alt="Seal" class="avatar-img"></div>
+                <div class="avatar"><img src="./avatar-seal.svg" alt="Seal" class="avatar-img"></div>
                 <div class="review-text">
                     <p>"The neo-brutalist aesthetic really captures the harshness of the Antarctic shelf."</p>
                     <h4>— Seal of Approval</h4>
